--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,10 +13,10 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 222.2 47.4% 11.2%;
+    --primary: 216, 71%, 96%;
     --primary-foreground: 210 40% 98%;
  
-    --secondary: 210 40% 96.1%;
+    --secondary: 236.078 79% 62%;
     --secondary-foreground: 222.2 47.4% 11.2%;
  
     --muted: 210 40% 96.1%;
@@ -48,7 +48,7 @@
     --primary: 107 25% 61%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 236.078 79% 62%;
     --secondary-foreground: 210 40% 98%;
  
     --muted: 107 25% 61%;
@@ -60,7 +60,7 @@
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
  
-    --border: 107 25% 61%;
+    --border: 216 46% 83%;
     --input: 210 40% 98%;
     --ring: 212.7 26.8% 83.9%;
   }
